--- a/chartRandom.html
+++ b/chartRandom.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<section class="page-header">
-      <h1 class="project-name">InfoVis-Meysam</h1>
+      <h1 class="project-name"><a href="index.html">InfoVis-Meysam</a></h1>
       <h2 class="project-tagline">Information Visualization</h2>
     </section>
 	<section class="main-content">
